--- a/src/pages/operacao/viagens/[id].astro
+++ b/src/pages/operacao/viagens/[id].astro
@@ -11,7 +11,7 @@ const activePage = "operacao_viagens";
   <HeaderPage
     title="Dossiê da Viagem"
     subtitle="Detalhes, passageiros e documentos vinculados."
-    color="teal"
+    color="blue"
   />
 
   <DossieViagemIsland client:load viagemId={id} />
