--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,6 +14,6 @@ const activePage = "dashboard";
       color="purple"
     />
 
-    <DashboardGeralIsland client:load />
+    <DashboardGeralIsland client:visible />
   </div>
 </DashboardLayout>
