--- a/src/pages/orcamentos/consulta.astro
+++ b/src/pages/orcamentos/consulta.astro
@@ -19,5 +19,5 @@ const activePage = "orcamentos";
     </div>
   </HeaderPage>
 
-  <QuoteListIsland client:load />
+  <QuoteListIsland client:idle />
 </DashboardLayout>
