--- a/src/pages/vendas/consulta.astro
+++ b/src/pages/vendas/consulta.astro
@@ -13,5 +13,5 @@ const activePage = "vendas";
     color="green"
   />
 
-  <VendasConsultaIsland client:load />
+  <VendasConsultaIsland client:idle />
 </DashboardLayout>
