--- a/src/pages/orcamentos/[id].astro
+++ b/src/pages/orcamentos/[id].astro
@@ -67,5 +67,5 @@ const activePage = "orcamentos";
 ---
 
 <DashboardLayout title="Orcamentos" {activePage}>
-  <QuoteDetailIsland client:load quote={quote} items={itemsWithSegments} />
+  <QuoteDetailIsland client:visible quote={quote} items={itemsWithSegments} />
 </DashboardLayout>
