--- a/src/pages/orcamentos/criar.astro
+++ b/src/pages/orcamentos/criar.astro
@@ -39,5 +39,5 @@ const activePage = "orcamentos";
 ---
 
 <DashboardLayout title="Orcamentos" {activePage}>
-  <QuoteManualIsland client:load />
+  <QuoteManualIsland client:visible />
 </DashboardLayout>
