--- a/src/pages/perfil/index.astro
+++ b/src/pages/perfil/index.astro
@@ -10,5 +10,5 @@ const activePage = "perfil";
   <h1 class="page-title">Meu Perfil</h1>
   <p class="page-subtitle">Atualize seus dados pessoais e de acesso.</p>
 
-  <PerfilIsland client:load />
+  <PerfilIsland client:visible />
 </DashboardLayout>
