--- a/src/pages/vendas/cadastro.astro
+++ b/src/pages/vendas/cadastro.astro
@@ -13,5 +13,5 @@ const activePage = "vendas";
     color="green"
   />
 
-  <VendasCadastroIsland client:load />
+  <VendasCadastroIsland client:visible />
 </DashboardLayout>
