--- a/src/pages/clientes/cadastro.astro
+++ b/src/pages/clientes/cadastro.astro
@@ -14,6 +14,6 @@ const activePage = "clientes";
       color="blue"
     />
 
-    <ClientesIsland client:visible />
+    <ClientesIsland client:idle />
   </div>
 </DashboardLayout>
