--- a/src/pages/auth/login.astro
+++ b/src/pages/auth/login.astro
@@ -14,6 +14,6 @@ const pageTitle = `Login - ${SYSTEM_NAME}`;
     <title>{pageTitle}</title>
   </head>
   <body class="auth-body">
-    <AuthLoginIsland client:load />
+    <AuthLoginIsland client:visible />
   </body>
 </html>
