--- a/src/pages/auth/recover.astro
+++ b/src/pages/auth/recover.astro
@@ -14,6 +14,6 @@ const pageTitle = `Recuperar senha - ${SYSTEM_NAME}`;
     <title>{pageTitle}</title>
   </head>
   <body class="auth-body">
-    <AuthRecoverIsland client:load />
+    <AuthRecoverIsland client:visible />
   </body>
 </html>
