--- a/src/pages/auth/register.astro
+++ b/src/pages/auth/register.astro
@@ -14,6 +14,6 @@ const pageTitle = `Criar conta - ${SYSTEM_NAME}`;
     <title>{pageTitle}</title>
   </head>
   <body class="auth-body">
-    <AuthRegisterIsland client:load />
+    <AuthRegisterIsland client:visible />
   </body>
 </html>
