--- a/src/pages/auth/reset.astro
+++ b/src/pages/auth/reset.astro
@@ -14,6 +14,6 @@ const pageTitle = `Nova senha - ${SYSTEM_NAME}`;
     <title>{pageTitle}</title>
   </head>
   <body class="auth-body">
-    <AuthResetIsland client:load />
+    <AuthResetIsland client:visible />
   </body>
 </html>
