--- a/src/pages/clientes/carteira.astro
+++ b/src/pages/clientes/carteira.astro
@@ -14,6 +14,6 @@ const activePage = "clientes";
       color="blue"
     />
 
-    <ClientesConsultaIsland client:idle />
+    <ClientesConsultaIsland client:only="react" />
   </div>
 </DashboardLayout>
