--- a/src/pages/cadastros/circuitos.astro
+++ b/src/pages/cadastros/circuitos.astro
@@ -13,5 +13,5 @@ const activePage = "circuitos";
     color="blue"
   />
 
-  <CircuitosIsland client:idle />
+  <CircuitosIsland client:only="react" />
 </DashboardLayout>
