--- a/src/pages/cadastros/estados.astro
+++ b/src/pages/cadastros/estados.astro
@@ -13,5 +13,5 @@ const activePage = "subdivisoes";
     color="blue"
   />
 
-  <SubdivisoesIsland client:idle />
+  <SubdivisoesIsland client:only="react" />
 </DashboardLayout>
