--- a/src/pages/cadastros/lote.astro
+++ b/src/pages/cadastros/lote.astro
@@ -13,5 +13,5 @@ const activePage = "lote";
     color="blue"
   />
 
-  <ProdutosLoteIsland client:idle />
+  <ProdutosLoteIsland client:only="react" />
 </DashboardLayout>
