--- a/src/pages/cadastros/produtos.astro
+++ b/src/pages/cadastros/produtos.astro
@@ -13,5 +13,5 @@ const activePage = "produtos";
     color="blue"
   />
 
-  <ProdutosIsland client:idle />
+  <ProdutosIsland client:only="react" />
 </DashboardLayout>
