--- a/src/pages/admin/permissoes.astro
+++ b/src/pages/admin/permissoes.astro
@@ -8,5 +8,5 @@ const pageTitle = "Painel de Permissões";
 <Layout title={pageTitle} module="Admin">
   <h1 class="page-title">{pageTitle}</h1>
 
-  <AdminPermissoesIsland client:only="react" />
+  <AdminPermissoesIsland client:idle />
 </Layout>
