--- a/src/pages/cadastros/fornecedores.astro
+++ b/src/pages/cadastros/fornecedores.astro
@@ -13,5 +13,5 @@ const activePage = "fornecedores";
     color="teal"
   />
 
-  <FornecedoresIsland client:only="react" />
+  <FornecedoresIsland client:idle />
 </DashboardLayout>
