--- a/src/pages/cadastros/paises.astro
+++ b/src/pages/cadastros/paises.astro
@@ -13,5 +13,5 @@ const activePage = "paises";
     color="blue"
   />
 
-  <PaisesIsland client:only="react" />
+  <PaisesIsland client:idle />
 </DashboardLayout>
