--- a/src/pages/operacao/comissionamento.astro
+++ b/src/pages/operacao/comissionamento.astro
@@ -13,5 +13,5 @@ const activePage = "comissionamento";
     color="green"
   />
 
-  <ComissionamentoIsland client:only="react" />
+  <ComissionamentoIsland client:idle />
 </DashboardLayout>
