--- a/src/pages/parametros/regras-comissao.astro
+++ b/src/pages/parametros/regras-comissao.astro
@@ -12,5 +12,5 @@ const activePage = "regras-comissao";
     Cadastre regras gerais ou escalonadas para aplicar em produtos e cálculos de metas.
   </p>
 
-  <CommissionRulesIsland client:only="react" />
+  <CommissionRulesIsland client:idle />
 </DashboardLayout>
