--- a/src/pages/cadastros/cidades.astro
+++ b/src/pages/cadastros/cidades.astro
@@ -13,5 +13,5 @@ const activePage = "cidades";
     color="blue"
   />
 
-  <CidadesIsland client:idle />
+  <CidadesIsland client:load />
 </DashboardLayout>
