--- a/src/pages/documentacao/index.astro
+++ b/src/pages/documentacao/index.astro
@@ -6,7 +6,7 @@ const pageTitle = "Documentação do Sistema";
 
 <Layout title={pageTitle} module="Admin">
   <h1 class="page-title">{pageTitle}</h1>
-  <DocumentationPortalIsland client:idle />
+  <DocumentationPortalIsland client:load />
 </Layout>
 
 const pageTitle = "Documentação do Sistema";
