--- a/src/pages/metas/vendedor.astro
+++ b/src/pages/metas/vendedor.astro
@@ -7,5 +7,5 @@ const pageTitle = "Metas do Vendedor";
 
 <Layout title={pageTitle} module="Metas">
   <h1 class="page-title">{pageTitle}</h1>
-  <MetasVendedorIsland client:idle />
+  <MetasVendedorIsland client:load />
 </Layout>
