--- a/src/pages/operacao/viagens/[id].astro
+++ b/src/pages/operacao/viagens/[id].astro
@@ -14,5 +14,5 @@ const activePage = "operacao_viagens";
     color="blue"
   />
 
-  <DossieViagemIsland client:idle viagemId={id} />
+  <DossieViagemIsland client:only="react" viagemId={id} />
 </DashboardLayout>
