--- a/src/pages/parametros/comissoes/templates.astro
+++ b/src/pages/parametros/comissoes/templates.astro
@@ -8,5 +8,5 @@ const pageTitle = "Templates de Comissão";
 <Layout title={pageTitle} module="Parametros">
   <h1 class="page-title">{pageTitle}</h1>
 
-  <CommissionTemplatesIsland client:idle />
+  <CommissionTemplatesIsland client:load />
 </Layout>
