--- a/src/pages/parametros/orcamentos.astro
+++ b/src/pages/parametros/orcamentos.astro
@@ -13,5 +13,5 @@ const activePage = "parametros-orcamentos";
     color="purple"
   />
 
-  <QuotePrintSettingsIsland client:idle />
+  <QuotePrintSettingsIsland client:load />
 </DashboardLayout>
