--- a/src/pages/relatorios/vendas-por-cliente.astro
+++ b/src/pages/relatorios/vendas-por-cliente.astro
@@ -13,5 +13,5 @@ const activePage = "relatorios-vendas-cliente";
     color="purple"
   />
 
-  <RelatorioAgrupadoClienteIsland client:idle />
+  <RelatorioAgrupadoClienteIsland client:load />
 </DashboardLayout>
