--- a/src/pages/relatorios/vendas-por-destino.astro
+++ b/src/pages/relatorios/vendas-por-destino.astro
@@ -13,5 +13,5 @@ const activePage = "relatorios-vendas-destino";
     color="purple"
   />
 
-  <RelatorioAgrupadoDestinoIsland client:idle />
+  <RelatorioAgrupadoDestinoIsland client:load />
 </DashboardLayout>
