--- a/src/pages/relatorios/vendas-por-produto.astro
+++ b/src/pages/relatorios/vendas-por-produto.astro
@@ -13,5 +13,5 @@ const activePage = "relatorios-vendas-produto";
     color="purple"
   />
 
-  <RelatorioAgrupadoProdutoIsland client:idle />
+  <RelatorioAgrupadoProdutoIsland client:load />
 </DashboardLayout>
