--- a/src/pages/relatorios/vendas.astro
+++ b/src/pages/relatorios/vendas.astro
@@ -13,5 +13,5 @@ const activePage = "relatorios-vendas";
     color="purple"
   />
 
-  <RelatorioVendasIsland client:idle />
+  <RelatorioVendasIsland client:load />
 </DashboardLayout>
