--- a/src/pages/comissoes/fechamento.astro
+++ b/src/pages/comissoes/fechamento.astro
@@ -7,5 +7,5 @@ const pageTitle = "Fechamento de Comissão";
 
 <Layout title={pageTitle} module="Metas">
   <h1 class="page-title">{pageTitle}</h1>
-  <FechamentoComissaoIsland client:idle />
+  <FechamentoComissaoIsland client:load />
 </Layout>
