--- a/src/pages/orcamentos/importar.astro
+++ b/src/pages/orcamentos/importar.astro
@@ -39,5 +39,5 @@ const activePage = "orcamentos";
 ---
 
 <DashboardLayout title="Orcamentos" {activePage}>
-  <QuoteImportIsland client:idle />
+  <QuoteImportIsland client:load />
 </DashboardLayout>
