--- a/src/pages/parametros/cambios.astro
+++ b/src/pages/parametros/cambios.astro
@@ -11,5 +11,5 @@ const activePage = "parametros-cambios";
   <p class="page-subtitle">
     Insira os valores de câmbio utilizados pela empresa para calcular as equivalências em reais.
   </p>
-  <ParametrosCambiosIsland client:idle />
+  <ParametrosCambiosIsland client:load />
 </DashboardLayout>
