--- a/src/pages/parametros/tipo-produtos.astro
+++ b/src/pages/parametros/tipo-produtos.astro
@@ -13,5 +13,5 @@ const activePage = "parametros-tipo-produtos";
     color="blue"
   />
 
-  <TipoProdutosIsland client:idle />
+  <TipoProdutosIsland client:load />
 </DashboardLayout>
