--- a/src/pages/admin/permissoes.astro
+++ b/src/pages/admin/permissoes.astro
@@ -5,7 +5,7 @@ import AdminPermissoesIsland from "../../components/islands/AdminPermissoesIslan
 const pageTitle = "Painel de Permissões";
 ---
 
-<Layout title={pageTitle} module="Admin">
+<Layout title={pageTitle} module="Admin" activePage="admin-permissoes">
   <h1 class="page-title">{pageTitle}</h1>
 
   <AdminPermissoesIsland client:idle />
