--- a/src/pages/perfil/index.astro
+++ b/src/pages/perfil/index.astro
@@ -4,6 +4,9 @@ import DashboardLayout from "../../layouts/DashboardLayout.astro";
 import PerfilIsland from "../../components/islands/PerfilIsland.tsx";
 
 const activePage = "perfil";
+if (Astro.url.searchParams.get("onboarding") === "1") {
+  return Astro.redirect("/perfil/onboarding");
+}
 ---
 
 <DashboardLayout title="Meu Perfil" {activePage}>
